2011-01-26  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Fixed bug #10668: Queries that don't return any results cause rendering of JavaScript code inside of the suggestion box

2011-01-20  Markus Goldbach  <markus.goldbach@dkd.de>

	* Fixed issue where xclass declaration of tslib_cObj produce fatal php errors in backend mode.

2010-11-29  Markus Goldbach <markus.goldbach@dkd.de>

	* Added Tomcat configuration to setup UTF-8 URL support and bind Tomcat to localhost for security reason
	* Changed install script to deploy the Tomcat configuration

2010-11-29  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #9808: Plugin does not work when on a mounted page
	* Changed autowarmCount for solr.FastLRUCache in solrconfig.xml for better performance of newly opened searchers

2010-11-24  Markus Goldbach <markus.goldbach@dkd.de>

	* Changed Schema, remove ISOLatin mapping from type textSpell, after problems with umlauts in suggestion

2010-11-23  Ingo Renner  <ingo.renner@dkd.de>

	* Added a parameter to the constructor of tx_solr_Search to explicitly set the tx_solr_SolrService connection to use when searching
	* Moved logging modifications from the SolrPhpClient library to its subclass tx_solr_SolrService

2010-10-12  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Finally removed whitespace from the start of a single word suggestion

2010-10-08  Markus Goldbach  <markus.goldbach@dkd.de>

	* Added missing translations for dutch, credits Bart Gijswijt

2010-10-08  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #10165 - Phrase queries not working as quotes are escaped in Solr queries

2010-10-06  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a missing hook registration resulting in user groups not being tracked and thus making protected results publicly visible
	* Added a marker displaying the result document ID to the default template

2010-10-06  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Removed whitespace from the start of a single word suggestion