@@ -44,7 +44,7 @@ class tx_solr_report_SchemaStatus implements tx_reports_StatusProvider {
 	 *
 	 * @var	string
 	 */
-	const RECOMMENDED_SCHEMA_VERSION = 'tx_solr-1-5-0--20101124';
+	const RECOMMENDED_SCHEMA_VERSION = 'tx_solr-1-6-0--20110126';
 
 	/**
 	 * Compiles a collection of schema version checks against each configured
