@@ -19,7 +19,7 @@
 	status report - tx_solr_report_SchemaStatus - checking against this
 	name property, that status check must be updated as well.
 -->
-<schema name="tx_solr-1-5-0--20101124" version="1.1">
+<schema name="tx_solr-1-6-0--20110126" version="1.1">
 	<!--
 		attribute "name" is the name of this schema and is only used for
 		display purposes. Applications should change this to reflect the
@@ -188,7 +188,6 @@
 						enablePositionIncrements="true"
 				/>
 				<filter class="solr.LowerCaseFilterFactory"/>
-				<charFilter class="solr.MappingCharFilterFactory" mapping="mapping-ISOLatin1Accent.txt"/>
 				<filter class="solr.SnowballPorterFilterFactory" language="English" protected="protwords.txt"/>
 				<filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
 			</analyzer>
@@ -283,7 +282,6 @@
 					when you want your sorting to be case insensitive
 				-->
 				<filter class="solr.LowerCaseFilterFactory" />
-				<charFilter class="solr.MappingCharFilterFactory" mapping="mapping-ISOLatin1Accent.txt"/>
 				<!-- The TrimFilter removes any leading or trailing whitespace -->
 				<filter class="solr.TrimFilterFactory" />
 				<!-- The PatternReplaceFilter gives you the flexibility to use
