@@ -1,3 +1,7 @@
+2011-01-26  Markus Goldbach  <markus.goldbach@dkd.de>
+
+	* Changed schema, remove the ISOLatin mapping from the schema after problems with umlauts
+
 2011-01-26  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
 	* Fixed bug #10668: Queries that don't return any results cause rendering of JavaScript code inside of the suggestion box
